Mobile responses for team area are good-to-go (also found an issue with top area on iPhoneX and adjusted to resolve for anybody using that device).

--- a/new-style.css
+++ b/new-style.css
@@ -265,6 +265,15 @@ h3, p {
     }
 }
 
+@media screen and (max-width: 800px) {
+    .contributors {
+        grid-template-columns: auto auto auto auto;
+    }
+    .team {
+        height: 1000px;
+    }
+}
+
 @media screen and (max-width: 700px) {
     .text h2 {
         font-size: 1em;
@@ -288,6 +297,12 @@ h3, p {
     .desktop {
         left: 300;
     }
+    .contributors {
+        grid-template-columns: auto auto auto;
+    }
+    .team {
+        height: 1200px;
+    }
 }
 
 @media screen and (max-width: 600px) {
@@ -302,6 +317,15 @@ h3, p {
 
     .nav {
         font-size: 0.85em;
+    }
+}
+
+@media screen and (max-width: 550px) {
+    .contributors {
+        grid-template-columns: auto auto;
+    }
+    .team {
+        height: 1500px;
     }
 }
 
@@ -321,5 +345,17 @@ h3, p {
     }
     .feature-img {
         height: 50vh;
+    }
+}
+
+@media screen and (max-width: 400px) {
+    .desktop {
+        left: 120;
+    }
+}
+
+@media screen and (max-width: 350px) {
+    .team {
+        height: 1600px;
     }
 }
